--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,7 +18,7 @@
         </li>
         <li class="nav-item">
           
-          <%= link_to "contacto", pages_contact_path, class: "nav-link" %>
+          <%= link_to "contacto", contacts_path, class: "nav-link" %>
         </li>
         
       </ul>
